<?php

use Illuminate\Database\Migrations\Migration;
use Illuminate\Database\Schema\Blueprint;
use Illuminate\Support\Facades\Schema;

return new class extends Migration
{
    public function up(): void
    {
        Schema::create('favorites', function (Blueprint $table) {
            $table->id();
            $table->foreignId('user_id')->constrained('users')->cascadeOnDelete();
            $table->string('gif_id');
            $table->string('alias', 100);
            $table->timestamps();

            // A user cannot favorite the same GIF twice.
            $table->unique(['user_id', 'gif_id']);
        });
    }

    public function down(): void
    {
        Schema::dropIfExists('favorites');
    }
};
